--- a/Lab1.edit/plugin.properties
+++ b/Lab1.edit/plugin.properties
@@ -114,3 +114,15 @@ _UI_Visibility_ENABLED_literal = ENABLED
 _UI_Visibility_DISABLED_literal = DISABLED
 _UI_Layout_HORIZONTAL_literal = HORIZONTAL
 _UI_Layout_VERTICAL_literal = VERTICAL
+_UI_ListEntrySet_type = List Entry Set
+_UI_ListEntry_type = List Entry
+_UI_ColumnSet_type = Column Set
+_UI_Column_type = Column
+_UI_ListViewElement_entrySet_feature = Entry Set
+_UI_ListEntrySet_entries_feature = Entries
+_UI_ListEntrySet_buttons_feature = Buttons
+_UI_ListEntry_propertyRef_feature = Property Ref
+_UI_TableViewElement_columnSet_feature = Column Set
+_UI_ColumnSet_columns_feature = Columns
+_UI_ColumnSet_buttons_feature = Buttons
+_UI_Column_propertyRef_feature = Property Ref
